--- a/fundamentos_ia/trabalho_final/hg_trabalho_final_IA_fundamentos.ipynb
+++ b/fundamentos_ia/trabalho_final/hg_trabalho_final_IA_fundamentos.ipynb
@@ -2560,28 +2560,22 @@
     {
       "cell_type": "code",
       "source": [
-        "joblib.dump(rf_tunned, 'rf_tunned.pkl')"
+        "joblib.dump(rf_tunned, 'nn_tunned.pkl')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "g2SRd6OXZvBj",
-        "outputId": "a384ce9a-fbe8-4a50-89cf-7d606fc15db9"
+        "id": "g2SRd6OXZvBj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['rf_tunned.pkl']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 40
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Carrega os modelos parafins de comparação"
+      ],
+      "metadata": {
+        "id": "HVjmkZqDWAyF"
+      }
     },
     {
       "cell_type": "code",
@@ -2599,6 +2593,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Comparação entre os modelos, dos scores de acurácia e área sob a curva ROC  "
+      ],
+      "metadata": {
+        "id": "czSi_n72WLjh"
+      }
     },
     {
       "cell_type": "code",
@@ -2803,6 +2806,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Gráfico de comparação das métricas avaliadas entre os modelos"
+      ],
+      "metadata": {
+        "id": "S_3_s86qWe3B"
+      }
     },
     {
       "cell_type": "code",
